<resources>

    <string name="kakao_app_key">a68ee9c697cd04b9f8ad509a1b4b8fe0</string>
    <string name="kakao_scheme">kakaoa68ee9c697cd04b9f8ad509a1b4b8fe0</string>
    <string name="kakaolink_host">kakaolink</string>

    <string name="app_name">짤세상</string>
    <string name="suffix">짤</string>
    <string name="developer">Copyright by iron.choi</string>
    <string name="transitionName">transition</string>
    <string name="text_nothing">없음</string>
    <string name="text_myChoice">내가 선택한 짤</string>
    <string name="text_default_query">웃긴</string>
    <string name="text_log_title">검색로그 확인하기</string>
    <string name="text_confirm_short">확인</string>
    <string name="text_cancel_short">취소</string>
    <string name="text_cancel_long">취소되었습니다</string>
    <string name="text_confirm_log">로그확인</string>
    <string name="text_cancel_log">취소</string>
    <string name="text_log">검색로그</string>
    <string name="text_camera">카메라</string>
    <string name="text_news_title">관련기사</string>
    <string name="text_news_see"><u>바로가기</u></string>
    <string name="text_recent_search">최근 검색어</string>
    <string name="text_recent_no_search">최근 검색한 내역이 없습니다</string>
    <string name="text_storage">보관함</string>
    <string name="text_move_storage">보관함 바로가기</string>
    <string name="text_store_message">보관함에 저장하시겠습니까?</string>
    <string name="text_store_move">보관함으로 이동하시겠습니까?</string>
    <string name="text_search_short">검색</string>
    <string name="text_search">검색어를 입력해주세요</string>
    <string name="text_search_label">라벨로 찾아보기</string>
    <string name="text_frequent_labels">자주 등장하는 라벨</string>
    <string name="text_no_labels">등록된 라벨이 없습니다</string>
    <string name="text_favorite">즐겨찾는 짤 모음</string>
    <string name="text_picture_i_take">내가 찍는 짤</string>
    <string name="text_collection">짤 모음</string>
    <string name="text_add_favorites">즐겨찾기 등록하기</string>
    <string name="text_register_favorites">즐겨찾기에 등록해주세요</string>
    <string name="text_register_message">즐겨찾기에 추가하시겠습니까?</string>
    <string name="text_register_complete">즐겨찾기에 추가되었습니다</string>
    <string name="text_share">공유하기</string>
    <string name="text_share_question">이 짤을 친구에게 공유하시겠습니까?</string>
    <string name="text_cancel">취소하기</string>
    <string name="text_store">저장하기</string>
    <string name="text_storing">저장중..</string>
    <string name="text_store_complete">짤 저장이 완료되었습니다</string>
    <string name="text_store_already_done">이미 저장된 짤 입니다</string>
    <string name="text_nomeme">저장된 짤이 없습니다</string>
    <string name="text_store_failed">짤 저장에 실패하였습니다</string>
    <string name="text_image_cant_load">이미지를 불러올수 없습니다</string>
    <string name="text_quit">정말 종료하시겠습니까?</string>
    <string name="text_delete_short">비우기</string>
    <string name="text_delete">정말로 삭제하시겠습니까?</string>
    <string name="text_delete_complete">선택된 짤이 삭제되었습니다</string>
    <string name="text_back">기본화면으로 돌아가시겠습니까?</string>
    <string name="text_date">등록날짜</string>
    <string name="text_category">카테고리</string>
    <string name="text_not_found">검색된 이미지가 없습니다</string>
    <string name="text_recognize">텍스트 추출</string>
    <string name="text_label">라벨 추출</string>
    <string name="text_menu">메뉴</string>
    <string name="text_sort_descending">최근순</string>
    <string name="text_sort_ascending">과거순</string>
    <string name="text_sort_query">검색어순</string>
    <string name="text_sort_label">라벨검색</string>
    <string name="text_screen_default">기본 화면</string>
    <string name="text_screen_add">즐겨찾기</string>
    <string name="text_screen_delete">삭제</string>
    <string name="text_search_meme">검색 짤</string>
    <string name="text_camera_meme">카메라 짤</string>

</resources>