<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/_title_search"
            style="@style/NotoBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_line"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_search_meme"/>

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/search"
            style="@style/NotoMediumText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/edittext_rounded"
            android:completionThreshold="1"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/text_search"
            android:imeOptions="actionNext"
            android:paddingStart="16dp"
            android:drawableStart="@drawable/vector_search"
            android:transitionName="@string/transitionName"
            app:layout_constraintTop_toBottomOf="@id/_title_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/history"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/history"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/search"
            app:layout_constraintBottom_toBottomOf="@id/search"
            android:layout_marginEnd="8dp"
            android:src="@drawable/vector_history"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/notify"
            style="@style/NotoBoldText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/text_not_found"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/nested_rcv"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_rcv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search"
            android:fillViewport="true">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                android:layout_marginTop="8dp"
                app:spanCount="2"
                tools:listitem="@layout/item_image"
                itemSpacing="@{8}"/>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>