<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/_top_text"
            android:theme="@style/NotoBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_recent_search"
            android:textSize="14sp"
            android:textColor="@color/boldgray"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/delete"
            android:theme="@style/NotoRegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/_top_text"
            app:layout_constraintBottom_toBottomOf="@id/_top_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:text="@string/text_delete_short"
            android:textSize="12sp"
            android:textColor="@color/gray"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/search_title"
            android:theme="@style/NotoRegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/_top_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/text_recent_no_search"
            android:textSize="16sp"
            android:textColor="@color/boldgray"
            android:visibility="invisible"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_top_text"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            tools:listitem="@layout/item_search_history" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>