<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.kakao.iron.ui.camera.CameraViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/_textInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/_line"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/text_menu">

            <AutoCompleteTextView
                android:id="@+id/dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:text="@string/text_screen_default"
                textFileState="@{viewModel.stateWatcher}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/_line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/_textInput"
            android:layout_marginTop="8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/_collection_title"
            android:theme="@style/NotoBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/_line2"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical"
            android:text="@string/text_camera_meme"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_line2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fillViewport="true">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_camera"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                android:orientation="vertical"
                app:spanCount="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/_line2"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:listitem="@layout/item_camera"
                submitList="@{viewModel.fileList}"
                itemSpacing="@{8}"/>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/add"
            android:theme="@style/fabTheme"
            style="@style/NotoBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center_horizontal"
            app:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:alpha="0.8"
            app:icon="@drawable/vector_add"
            app:iconTint="@color/white"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:theme="@style/NotoBoldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/_line2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            android:text="@string/text_nomeme"
            android:visibility="@{viewModel.fileList.size() > 0 ? View.INVISIBLE : View.VISIBLE}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>