<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="filePath"
            type="String" />
        <variable
            name="imageUrl"
            type="String" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@null">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/_guide_begin"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintGuide_begin="16dp"
                android:orientation="vertical"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/_guide_end"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintGuide_end="16dp"
                android:orientation="vertical"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/_title"
                android:theme="@style/NotoBoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_share_question"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/_guide_begin"
                app:layout_constraintEnd_toStartOf="@id/_guide_end"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottom_constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/_title"
                app:layout_constraintStart_toEndOf="@id/_guide_begin"
                app:layout_constraintEnd_toStartOf="@id/_guide_end">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="4:5"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    app:cardPreventCornerOverlap="false"
                    app:contentPadding="0dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="12dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintTop_toBottomOf="@id/_title"
                        app:layout_constraintStart_toEndOf="@id/_guide_begin"
                        app:layout_constraintEnd_toStartOf="@id/_guide_end"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        tools:background="@drawable/ic_launcher_foreground"/>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/_view_top"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/bottom_constraint"
                app:layout_constraintStart_toEndOf="@id/_guide_begin"
                app:layout_constraintEnd_toStartOf="@id/_guide_end"
                app:layout_constraintBottom_toTopOf="@id/_text"
                android:background="@color/gray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/_text_title"
                android:theme="@style/NotoMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/_guide_begin"
                app:layout_constraintTop_toBottomOf="@id/_view_top"
                app:layout_constraintBottom_toTopOf="@id/_view_middle"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:text="@string/text_recognize"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/_text"
                style="@style/NotoRegularText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/_text_title"
                app:layout_constraintEnd_toStartOf="@id/_guide_end"
                app:layout_constraintTop_toBottomOf="@id/_view_top"
                app:layout_constraintBottom_toTopOf="@id/_view_middle"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:maxLines="4"
                android:ellipsize="end"/>

            <View
                android:id="@+id/_view_middle"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/_text"
                app:layout_constraintBottom_toTopOf="@id/_label"
                app:layout_constraintStart_toEndOf="@id/_guide_begin"
                app:layout_constraintEnd_toStartOf="@id/_guide_end"
                android:background="@color/gray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/_label_title"
                android:theme="@style/NotoMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/_view_middle"
                app:layout_constraintBottom_toTopOf="@id/_view_bottom"
                app:layout_constraintStart_toEndOf="@id/_guide_begin"
                android:layout_margin="8dp"
                android:textSize="16sp"
                android:text="@string/text_label"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/_label"
                style="@style/NotoRegularText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/_view_middle"
                app:layout_constraintBottom_toTopOf="@id/_view_bottom"
                app:layout_constraintStart_toStartOf="@id/_text"
                app:layout_constraintEnd_toStartOf="@id/_guide_end"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:maxLines="4"
                android:ellipsize="end"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <View
                android:id="@+id/_view_bottom"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/_label_title"
                app:layout_constraintBottom_toTopOf="@id/_empty"
                app:layout_constraintStart_toEndOf="@id/_guide_begin"
                app:layout_constraintEnd_toStartOf="@id/_guide_end"
                android:background="@color/gray" />

            <View
                android:id="@+id/_empty"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                app:layout_constraintTop_toBottomOf="@id/_view_bottom"
                app:layout_constraintBottom_toTopOf="@id/share"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/share"
                android:theme="@style/NotoBoldText"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/black"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/text_share"
                android:textColor="@color/white"/>

            <View
                android:layout_width="1dp"
                android:layout_height="32dp"
                app:layout_constraintTop_toTopOf="@id/share"
                app:layout_constraintBottom_toBottomOf="@id/share"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cancel"
                android:theme="@style/NotoBoldText"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toEndOf="@id/share"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/text_cancel"
                android:textColor="@color/white"
                android:background="@color/black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>